--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.7.8",
-    "angular-route": "^1.7.8",
     "angular-resource": "^1.7.8",
+    "angular-route": "^1.7.8",
     "browser-sync": "^2.26.7",
     "gulp": "^3.9.1",
-    "jquery": "^3.4.1",
-    "gulp-uglify": "^3.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-connect-php": "^1.0.3",
     "gulp-imagemin": "^6.1.1",
+    "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "jquery": "^3.4.1"
   },
   "dependencies": {
     "angular-local-storage": "^0.7.1",
-    "bootstrap": "^3.4.1",
-    "gulp-concat": "^2.6.1"
+    "bootstrap": "^v4.4.1",
+    "gulp-concat": "^2.6.1",
+    "popper.js": "^1.16.0"
   }
 }
